welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: ')' expected but '.' found.
		if (getDirectio()n==Direction.EST) {
                                             ^SnakeBuggle:10: error: illegal start of simple expression
	}
        ^